--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="bg">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cognitive Shield | Дигитален имунитет</title>
+    <title>Cognitive Shield | Digital Immunity</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-900 text-white font-sans">
     <nav class="p-6 border-b border-slate-800">
         <div class="container mx-auto flex justify-between items-center">
             <span class="text-2xl font-bold tracking-tighter">🛡️ COGNITIVE SHIELD</span>
-            <a href="https://github.com/твоето-потребителско-име/твоят-репозиторий" class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded-lg text-sm transition">GitHub Project</a>
+            <a href="https://github.com/твоето-потребителско-име/Cognitive-Shield-Project" class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded-lg text-sm transition">GitHub Project</a>
         </div>
     </nav>
     
     <header class="py-20 px-6 text-center">
         <h1 class="text-5xl md:text-7xl font-extrabold mb-6 bg-gradient-to-r from-blue-400 to-emerald-400 bg-clip-text text-transparent">
-            Анализ на методи, а не цензура.
+            Analyze Methods, Not Content.
         </h1>
         <p class="text-xl text-slate-400 max-w-2xl mx-auto mb-10">
-            Първата система с отворен код за детекция на логически грешки и манипулация в реално време.
+            The first open-source framework for real-time detection of logical fallacies and emotional manipulation.
         </p>
         <div class="flex justify-center gap-4">
             <div class="p-4 bg-slate-800 rounded-xl border border-slate-700 w-32">
@@ -28,23 +28,23 @@
             </div>
             <div class="p-4 bg-slate-800 rounded-xl border border-slate-700 w-32">
                 <div class="text-blue-500 font-bold">Privacy</div>
-                <div class="text-xs text-slate-500 font-mono italic">100%</div>
+                <div class="text-xs text-slate-500 font-mono italic">100% Edge</div>
             </div>
         </div>
     </header>
 
     <section class="container mx-auto py-16 px-6 grid md:grid-cols-3 gap-8 text-center">
         <div class="p-8 bg-slate-800/50 rounded-2xl border border-slate-700">
-            <h3 class="text-xl font-bold mb-4">Триангулация</h3>
-            <p class="text-slate-400 text-sm">Консенсус между официални данни, независима експертиза и финансова прозрачност.</p>
+            <h3 class="text-xl font-bold mb-4">Triangulation</h3>
+            <p class="text-slate-400 text-sm">Consensus between official data, independent expertise, and financial transparency.</p>
         </div>
         <div class="p-8 bg-slate-800/50 rounded-2xl border border-slate-700">
-            <h3 class="text-xl font-bold mb-4">NLP Детекция</h3>
-            <p class="text-slate-400 text-sm">Разпознаване на над 50 вида логически грешки и емоционален заряд в текст.</p>
+            <h3 class="text-xl font-bold mb-4">NLP Detection</h3>
+            <p class="text-slate-400 text-sm">Identifying 50+ types of logical fallacies and emotional priming in real-time.</p>
         </div>
         <div class="p-8 bg-slate-800/50 rounded-2xl border border-slate-700">
             <h3 class="text-xl font-bold mb-4">Open Source</h3>
-            <p class="text-slate-400 text-sm">Проектът е под AGPLv3 лиценз – собственост на общността, а не на корпорации.</p>
+            <p class="text-slate-400 text-sm">Licensed under AGPLv3 – owned by the community, not corporations.</p>
         </div>
     </section>
 
